# bird-feeder-ai

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.githooks/: commit-msg
config/: config.yaml.example  settings.py
grafana/: .env.example  README.md  docker-compose.yml
grafana/caddy/: Caddyfile
grafana/dashboards/: bird-feeder.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: sqlite.yml
mediamtx/: Dockerfile  docker-compose.yml  entrypoint.sh
notebooks/: convert_to_hef.ipynb
scripts/: backup_dropbox.sh  bird-feeder-backup.service  bird-feeder-backup.timer  cf_harden.sh  convert_hailo.py  convert_hailo_local.py  dropbox_auth.py  export_training_data.py  get_telegram_chat_id.py  notify_telegram.py  npu_concurrent_poc.py  prepare_wildlife_dataset.py  preprocess_dataset.py  remove_classes_from_dataset.py  restore_dropbox.sh  start_backend.sh  start_pipeline.sh  stop_backend.sh  stop_pipeline.sh  train_wildlife_yolo.py
src/backend/: api.py  database.py  schemas.py  storage.py  weather.py  weather_ingest.py
src/backend/templates/: dashboard.html  gallery_items.html  review.html  review_card.html
src/inference/: classifier.py  detector.py  tracker.py
src/notifications/: __init__.py  dispatcher.py  telegram.py  watchlist.py
src/pipeline/: camera.py  mode_manager.py  pipeline.py
src/training/: dataset.py  evaluate.py  export_onnx.py  model.py  train.py  transforms.py
tests/: test_api.py  test_database.py  test_integration.py  test_tracker.py
web/: package-lock.json  package.json
web/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/regions/: RegionsList.tsx  SnapshotCanvas.tsx  page.tsx
web/app/review/: page.tsx
web/app/sweep/: page.tsx
web/components/: DebugClickLogger.tsx  DetectionCard.tsx  Filters.tsx  Header.tsx  Logo.tsx  Modal.tsx  Pagination.tsx  SpeciesCombobox.tsx  StatCard.tsx
web/lib/: api.ts  format.ts  types.ts
